--- a/templates/travel/destination_detail.html
+++ b/templates/travel/destination_detail.html
@@ -88,6 +88,19 @@ destination.name }} bird watching{% endblock %}
         </div>
     </div>
 </section>
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '5640560fc7d98b942ff30353611f8d3f',
+  	'format' : 'iframe',
+  	'height' : 90,
+  	'width' : 728,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"
+></script>
 
 <!-- About & Info Section -->
 <section class="section">
@@ -156,6 +169,19 @@ destination.name }} bird watching{% endblock %}
         {% endif %}
     </div>
 </section>
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '5640560fc7d98b942ff30353611f8d3f',
+  	'format' : 'iframe',
+  	'height' : 90,
+  	'width' : 728,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"
+></script>
 
 <!-- Map Section (Placeholder) -->
 <section class="section">
