--- a/templates/travel/home.html
+++ b/templates/travel/home.html
@@ -102,6 +102,20 @@ tour, Kashmir heritage tour, best time to visit Kashmir, Kashmir travel guide, K
     </div>
 </section>
 
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '5640560fc7d98b942ff30353611f8d3f',
+  	'format' : 'iframe',
+  	'height' : 90,
+  	'width' : 728,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"
+></script>
+
 <!-- Featured Packages -->
 <section class="section" id="packages" style="background-color: #f8f9fa;">
     <h2 class="section-title">Handpicked Collections</h2>
@@ -142,6 +156,19 @@ tour, Kashmir heritage tour, best time to visit Kashmir, Kashmir travel guide, K
     </div>
 </section>
 
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '5640560fc7d98b942ff30353611f8d3f',
+  	'format' : 'iframe',
+  	'height' : 90,
+  	'width' : 728,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"
+></script>
 <!-- Most Viewed Blogs -->
 <section class="section">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
@@ -348,6 +375,20 @@ tour, Kashmir heritage tour, best time to visit Kashmir, Kashmir travel guide, K
         </div>
     </div>
 </section>
+
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '5640560fc7d98b942ff30353611f8d3f',
+  	'format' : 'iframe',
+  	'height' : 90,
+  	'width' : 728,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"
+></script>
 
 <!-- Newsletter Section Mobile Styles -->
 <style>
