--- a/templates/travel/package_detail.html
+++ b/templates/travel/package_detail.html
@@ -118,6 +118,19 @@ https://frozenkashmir.com/static/default-og.jpg
 {% endblock %}
 
 {% block content %}
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '5640560fc7d98b942ff30353611f8d3f',
+  	'format' : 'iframe',
+  	'height' : 90,
+  	'width' : 728,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"
+></script>
 <div class="section package-detail-container" style="display: grid; grid-template-columns: 2fr 1fr; gap: 2rem;">
   <div>
     {% if package.image %}
