--- a/templates/travel/blog_detail.html
+++ b/templates/travel/blog_detail.html
@@ -58,6 +58,21 @@ Kashmir activities guide, Kashmir things to do, Kashmir must visit{% endblock %}
         {{ post.content|linebreaks }}
     </div>
 
+    <!-- Monetag Banner Ad -->
+    <div style="text-align: center; margin: 2rem 0; overflow-x: auto;">
+        <script type="text/javascript">
+            atOptions = {
+                'key': '5640560fc7d98b942ff30353611f8d3f',
+                'format': 'iframe',
+                'height': 90,
+                'width': 728,
+                'params': {}
+            };
+        </script>
+        <script type="text/javascript"
+            src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"></script>
+    </div>
+
     <!-- Tags -->
     {% if post.tags %}
     <div style="margin-top: 3rem; padding-top: 2rem; border-top: 1px solid #ddd;">
