--- a/templates/travel/package_list.html
+++ b/templates/travel/package_list.html
@@ -226,6 +226,19 @@ Kashmir tent stay packages, Kashmir camping packages, Kashmir glamping tours{% e
         </div>
     </div>
 </section>
+<script type="text/javascript">
+  atOptions = {
+  	'key' : '5640560fc7d98b942ff30353611f8d3f',
+  	'format' : 'iframe',
+  	'height' : 90,
+  	'width' : 728,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/5640560fc7d98b942ff30353611f8d3f/invoke.js"
+></script>
 
 <script>
     function toggleFilters() {
